--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Word Parts</title>
+    <title>The Word Game - Simple</title>
 <style>
     body{
         background-color:aquamarine;
