--- a/simple.html
+++ b/simple.html
@@ -58,7 +58,7 @@
 function isValidWord(word) {
   // Replace this with your word validation logic
   // For example, using an array of valid words:
-  const validWords = ["unhappy", /* other valid words */];
+  const validWords = ["rebuild", /* other valid words */];
   return validWords.includes(word);
 }
 </script>
@@ -77,7 +77,7 @@ function isValidWord(word) {
 
   <div class="bankDiv">
     <h4>Word Bank</h4>
-    <p>Base Word: happy, care, wonder, hope, dream, friend. Prefixes: un, re, dis, pre, in, sub. </p>
+    <p>Base Word: smile, help, grow, learn, build, play. Prefixes: re, mis, out, over, under, super. </p>
     </div>
 
 </body>
