--- a/complex.html
+++ b/complex.html
@@ -59,7 +59,7 @@
 function isValidWord(word) {
   // Replace this with your word validation logic
   // For example, using an array of valid words:
-  const validWords = ["unhappyness", /* other valid words */];
+  const validWords = ["unhappily", /* other valid words */];
   return validWords.includes(word);
 }
 </script>
@@ -80,7 +80,7 @@ function isValidWord(word) {
 
   <div class="bankDiv">
     <h4>Word Bank</h4>
-    <p>Base Word: happy, care, wonder, hope, dream, friend. Prefixes: un, re, dis, pre, in, sub. </p>
+     <p>Base Word: happy, write, marine, view, possible, form. <br>Prefixes: re, un, sub, pre, in, trans. Suffixes: ly, ing, ment, able, tion, ed. </p>
     </div>
 
 </body>
