--- a/complex.html
+++ b/complex.html
@@ -59,7 +59,7 @@
 function isValidWord(word) {
   // Replace this with your word validation logic
   // For example, using an array of valid words:
-  const validWords = ["unhappily", /* other valid words */];
+  const validWords = ["unhappyly", /* other valid words */];
   return validWords.includes(word);
 }
 </script>
