--- a/simple.html
+++ b/simple.html
@@ -58,7 +58,7 @@
 function isValidWord(word) {
   // Replace this with your word validation logic
   // For example, using an array of valid words:
-  const validWords = ["rebuild", /* other valid words */];
+  const validWords = ["outgrow", "OutGrow", "Outgrow"];
   return validWords.includes(word);
 }
 </script>
